# Acey-Duecy

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: InBetweenGamePlay.h  InBetweenPlayer.h
instructor/: CMakeLists.txt  CardTests.cpp  DeckTests.cpp  HandTests.cpp  InBetweenHandTests.cpp  runMe.sh
src/: AIConservativeInBetweenPlayer.cpp  Bank.cpp  Card.cpp  Deck.cpp  Hand.cpp  HumanInBetweenPlayer.cpp  InBetweenGamePlay.cpp  InBetweenHand.cpp  InBetweenPlayer.cpp  main.cpp
test/: BankTests.cpp  CMakeLists.txt  CardTests.cpp  DeckTests.cpp  HandTests.cpp  InBetweenHandTests.cpp
